Style email btn

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>Our website is coming soon! In the meantime, feel free to contact us directly by email to discuss your electrical
                 needs. We look forward to hearing from you!</p>
         
-            <p><a href="mailto:GBMElectricalServicesLtd@gmail.com">GBMElectricalServicesLtd@gmail.com</a></p>
+            <p><a href="mailto:GBMElectricalServicesLtd@gmail.com" class="btn">Email us</a></p>
         </div>
     </div>
 </body>
