--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 <body>
     <div class="wrapper">
         <div class="container">
-            <img src="logo.jpg" alt="GBM Electrical Services logo" class="logo">
+            <a href="/" title="GBM Electrical Services"><img src="logo.jpg" alt="GBM Electrical Services logo"
+                    class="logo"></a>
 
             <p>Our website is coming soon! In the meantime, feel free to contact us via email or any of the social
                 channels below to discuss your electrical
